app/assets/stylesheets/active_scaffold_layout.css
.active-scaffold form,
.active-scaffold table,
.active-scaffold p,
.active-scaffold div,
.active-scaffold fieldset {
margin: 0;
padding: 0;
}

.active-scaffold {
margin: 5px 0;
}

.active-scaffold table {
width: 100%;
border-collapse: separate;
}

.active-scaffold a,
.active-scaffold a:visited {
text-decoration: none;
}

.active-scaffold div.actions a img,
.active-scaffold td.actions a img {
border: none;
vertical-align: middle;
}

.active-scaffold div.actions a.disabled img,
.active-scaffold td.actions a.disabled img {
opacity: 0.5;
}

.active-scaffold .clear-fix {
clear: both;
}

noscript.active-scaffold {
border-left: solid 5px;
font-size: 11px;
font-weight: bold;
padding: 5px 20px 5px 5px;
}

.active-scaffold .mark_record_column {
  width: 1px;
}

/* Header
   ======================== */

.active-scaffold-header {
position: relative;
}

.active-scaffold-header h2 {
padding: 2px 0px;
margin: 0;
font: bold 160% arial, sans-serif;
}

.active-scaffold-header div.actions a,
.active-scaffold-header div.actions {
float: right;
font: bold 14px arial;
letter-spacing: -1px;
text-decoration: none;
padding: 1px 2px;
white-space: nowrap;
margin-left: 5px;
background-position: 1px 50%;
background-repeat: no-repeat;
}

.active-scaffold-header div.actions a {
padding: 5px 5px;
margin-left: 0px;
}

.active-scaffold .active-scaffold .active-scaffold-header div.actions > a {
padding: 1px 5px;
}

.active-scaffold-header div.actions div.action_group {
display: inline;
float: right;
}

.active-scaffold-header div.actions div.action_group li a,
.active-scaffold-header div.actions div.action_group li div {
float: none;
margin: 0;
}

.active-scaffold-header div.actions .action_group ul {
line-height: 130%;
top: 19px;
}

.active-scaffold .active-scaffold .active-scaffold-header div.actions .action_group ul {
top: 14px;
}

.view .active-scaffold-header div.actions a,
.view .active-scaffold-header div.actions div,
.view .active-scaffold-header div.actions div.action_group {
float: left;
}

.active-scaffold-header div.actions a.disabled {
opacity: 0.5;
}

.active-scaffold-header div.actions a.new,
.active-scaffold-header div.actions a.new_existing,
.active-scaffold-header div.actions a.show_search,
.active-scaffold-header div.actions a.show_config_list,
.active-scaffold-header div.actions div.action_group div {
margin:0;  
padding: 5px 5px 5px 25px;
background-position: 5px 50%;
background-repeat: no-repeat;
}

.active-scaffold .active-scaffold .active-scaffold-header div.actions > a.new,
.active-scaffold .active-scaffold .active-scaffold-header div.actions > a.new_existing,
.active-scaffold .active-scaffold .active-scaffold-header div.actions > a.show_search,
.active-scaffold .active-scaffold .active-scaffold-header div.actions > a.show_config_list,
.active-scaffold .active-scaffold .active-scaffold-header div.actions div.action_group > div {
margin:0;
padding: 1px 5px 1px 20px;
background-position: 1px 50%;
background-repeat: no-repeat;
}

.active-scaffold-header div.actions a.disabled:hover {
background-color: transparent;
cursor: default;
}

/* Table :: Column Headers
   ============================= */

.active-scaffold th {
text-align: left;
}

.active-scaffold th a,
.active-scaffold th p {
font: bold 11px arial, sans-serif;
display: block;
}

.active-scaffold th a, .active-scaffold th a:visited {
padding: 2px 2px 2px 5px;
}

.active-scaffold th p {
padding: 2px 5px;
}

.active-scaffold th.sorted a {
padding-right: 18px;
}

.active-scaffold th.asc a,
.active-scaffold th.desc a,
.active-scaffold th.loading a {
  background: right 50% no-repeat;
}

.active-scaffold th .mark_heading {
margin-left: 5px;
}

.active-scaffold th.hidden, .active-scaffold td.hidden {
display: none;
}

/* Table :: Record Rows
   ============================= */

.active-scaffold tr.record td {
padding: 5px 4px;
font-family: Verdana, sans-serif;
font-size: 11px;
border: solid 1px;
border-width: 0 0 1px 1px;
}

.active-scaffold tr.record td.messages-container {
padding: 0px;
}

.active-scaffold tbody.records td.empty {
text-align: center;
}
.active-scaffold tbody.records td.in_place_editor_field .handle {
display:none;
}
.active-scaffold tbody.records td.in_place_editor_field.empty .handle {
display:inline;
}

.active-scaffold td.numeric,
.active-scaffold-calculations td {
text-align: right;
}

/* Table :: Actions (Edit, Delete)
   ============================= */
.active-scaffold tr.record td.actions {
border-right: solid 1px;
padding: 0;
min-width: 1%;
}

.active-scaffold tr.record td.actions table {
float: right;
width: auto;
margin-right: 5px;
}

.active-scaffold tr.record td.actions table td {
border: none;
text-align: right;
padding: 0 2px;
}

.active-scaffold tr.record td.actions a,
.active-scaffold tr.record td.actions div {
font: bold 11px verdana, sans-serif;
letter-spacing: -1px;
padding: 2px;
margin: 0 2px;
line-height: 16px;
white-space: nowrap;
}

.active-scaffold tr.record td.actions a.disabled {
opacity: 0.5;
}

.active-scaffold .actions .action_group {
position: relative;
text-align: left;
}

.active-scaffold .actions .action_group ul {
border: 2px solid;
list-style-type: none;
margin: 0;
padding: 0;
position: absolute;
line-height: 200%;
display: none;
width: 150px;
right: 0px;
z-index: 2;
}
.active-scaffold .actions .action_group.dyn ul {
width: auto;
display: block;
}

.active-scaffold .actions .action_group ul ul {
display: none;
position: absolute;
top: 0;
right: 150px;
}

.active-scaffold .actions .action_group ul li {
background: none repeat scroll 0 0;
border-top: 1px dashed;
display: block;
position: relative;
width: auto;
text-align: left;
}

.active-scaffold .actions .action_group ul li div {
  margin: 0;
  padding: 5px 5px 5px 25px;
  background-position: 5px 50%;
  background-repeat: no-repeat;
}

.active-scaffold .actions .action_group ul li a {
  display: block;
  margin: 0;
  padding: 5px 5px 5px 25px;
  background-position: 5px 50%;
  background-repeat: no-repeat;
}
/* ... */

